[package]
name = "indelMaP"
version = "0.1.0"
edition = "2021"
description = "IndelMaP alignment and ASR implementation in Rust"
authors = ["Clara Iglhaut", "Jūlija Pečerska"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsimony = { path = "../parsimony" }
clap = { version = "4.3.11", features = ["derive"] }
bio = "1.3.1"
nalgebra = "0.32.3"
approx = "0.5.1"
anyhow = "1.0.72"
rstest = "0.18.1"
rand = "0.8.5"
pest = "2.7.2"
pest_derive = "2.7.2"
ordered-float = "3.7.0"
assert_float_eq = "1.1.3"
log = "0.4.19"
pretty_env_logger = "0.5.0"
assert_matches = "1.5.0"
chrono = "0.4.26"
stats-cli = "3.0.1"
phylo = { git = "https://github.com/acg-team/rust-phylo", tag = "initial"}